--- a/helloworld/pom.xml
+++ b/helloworld/pom.xml
@@ -78,16 +78,16 @@
     
     <build>	    
     <plugins>
-     <plugin>
-      <groupId>org.sonatype.plugins</groupId>
-      <artifactId>nexus-staging-maven-plugin</artifactId>
-      <version>1.6.3</version>
-      <extensions>true</extensions>
-      <configuration>
-       <serverId>NXRMOSS3.18.1-01</serverId>
-       <nexusUrl>http://jenkinsos:8081/repository/maven-snapshots/</nexusUrl>
-      </configuration>
-     </plugin>
+      <plugin>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>nexus-staging-maven-plugin</artifactId>
+        <version>1.6.3</version>
+        <extensions>true</extensions>
+        <configuration>
+            <serverId>nexus</serverId>
+            <nexusUrl>http://jenkinsos:8081/</nexusUrl>
+        </configuration>
+      </plugin>
     </plugins>
 </build>
     
