--- a/pom.xml
+++ b/pom.xml
@@ -216,11 +216,30 @@
                 <updatePolicy>never</updatePolicy>
             </snapshots>
         </pluginRepository>
-    </pluginRepositories>
+    </pluginRepositories>    
+    
+    <distributionManagement>
+      <snapshotRepository>
+        <id>NXRMOSS3.18.1-01</id>
+        <url>http://jenkinsos:8081/repository/maven-snapshots/</url>
+      </snapshotRepository>
+    </distributionManagement>
+    
     <build>
         <!-- Set the name of the WAR, used as the context root when the app is deployed. -->
         <finalName>${project.artifactId}</finalName>
         <plugins>
+        <plugin>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>nexus-staging-maven-plugin</artifactId>
+        <version>1.6.3</version>
+        <extensions>true</extensions>
+        <configuration>
+            <serverId>NXRMOSS3.18.1-01</serverId>
+            <nexusUrl>http://jenkinsos:8081/</nexusUrl>
+        </configuration>
+      </plugin>
+    </plugins>
             <plugin>
                 <groupId>com.mycila</groupId>
                 <artifactId>license-maven-plugin</artifactId>
