--- a/helloworld/pom.xml
+++ b/helloworld/pom.xml
@@ -30,6 +30,7 @@
     </parent>
     <artifactId>helloworld</artifactId>
     <packaging>war</packaging>
+    <version>1.0-SNAPSHOT</version>
     <name>Quickstart: helloworld</name>
     <description>Helloworld</description>
     
@@ -69,6 +70,26 @@
 
     </dependencies>
     
-
+    <distributionManagement>
+     <snapshotRepository>
+      <id>NXRMOSS3.18.1-01</id>
+      <url>http://jenkinsos:8081/repository/maven-snapshots/</url>
+     </snapshotRepository>
+    </distributionManagement>
+    
+    <build>
+     <plugins>  
+      <plugin>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>nexus-staging-maven-plugin</artifactId>
+        <version>1.6.3</version>
+        <extensions>true</extensions>
+        <configuration>
+            <serverId>NXRMOSS3.18.1-01</serverId>
+            <nexusUrl>http://jenkinsos:8081/</nexusUrl>
+        </configuration>
+      </plugin>
+     </plugins>
+    </build>
     
 </project>
