--- a/helloworld/pom.xml
+++ b/helloworld/pom.xml
@@ -30,7 +30,7 @@
     </parent>
     <artifactId>helloworld</artifactId>
     <packaging>war</packaging>
-    
+    <version>1.0-SNAPSHOT</version>
     <name>Quickstart: helloworld</name>
     <description>Helloworld</description>
     
